# Converter

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  bts.jsonc  pyproject.toml
backend/app/: celery_app.py  celery_schemas.py  converter_schemas.py  converter_service.py  converter_tasks.py  database.py  main.py  models.py  settings.py  tasks.py
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: converter.ts
frontend/src/components/: Converter.css  Converter.tsx
migrations/: env.py
src/app/: celery_schemas.py  crud.py  main.py
tests/: test_database.py  test_main.py
