[project]
name = "converter"
version = "0.1.0"
description = "A Python project created with Better Fullstack"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "celery[redis]>=5.4.0",
    "python-dotenv>=1.0.1",
    # Document Conversion
    "pdf2docx>=0.5.8",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    # File Upload
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    # OCR for image-based PDFs
    "easyocr>=1.7.0",
    # Email validation for pydantic
    "email-validator>=2.0.0",
    # Advanced OCR with layout analysis
    "python-doctr>=1.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "marker-pdf>=1.10.2",
    "pypandoc>=1.17",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
